# madoka

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: builtins.rs  datum.rs  env.rs  eval.rs  lexer.rs  main.rs  parser.rs  tokens.rs
src/ast/: lexer.rs  mod.rs  token.rs
src/diagnostic/: diagnostic.rs  diagnostic_engine.rs  mod.rs
src/frontend/: error.rs  lexer.rs  mod.rs  token.rs  unit.rs
src/source/: loc.rs  manager.rs  mod.rs  pos.rs  source_analyzer.rs  source_file.rs  span.rs
src/utils/: has_that.rs  mod.rs
