[package]
name = "madoka"
version = "0.1.0"
edition = "2021"
description = """
An experimental Scheme interpreter with complete support for R7RS-small standard
"""
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.7"
